--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": "eslint . --fix",
+    "*": "prettier . --write --ignore-unknown"
+  },
   "dependencies": {
     "next": "14.2.0",
     "react": "^18",
