--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
 
     /* Language and Environment */
     "target": "ES2020", //                               /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "lib": ["dom", "dom.iterable", "esnext"], // /       /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+    "lib": [ "dom", "dom.iterable", "esnext" ], //       /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     "jsx": "preserve", //                                /* Specify what JSX code is generated. */
     // "experimentalDecorators": true,                   /* Enable experimental support for legacy experimental decorators. */
     // "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
@@ -30,7 +30,7 @@
     "moduleResolution": "bundler", //                    /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./", //                                  /* Specify the base directory to resolve non-relative module names. */
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [ "src/*" ]
     }, //                                                /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     "typeRoots": [
@@ -118,6 +118,6 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "src/**/*.spec.ts", "src/**/*.test.ts"]
+  "include": [ "next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts" ],
+  "exclude": [ "node_modules", "src/**/*.spec.ts", "src/**/*.test.ts" ]
 }
